--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@kenshooui/react-multi-select": "^1.1.6",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react": "^18.3.12",
     "axios": "^1.5.0",
     "babel-preset-react-app": "^10.0.1",
     "firebase": "^11.0.1",
@@ -50,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.9",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^9.14.0",
     "eslint-config-react-app": "^7.0.1"
   }
