--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
     "@babel/preset-env": "^7.26.0",
     "@kenshooui/react-multi-select": "^1.1.6",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.12",
     "axios": "^1.5.0",
     "babel-preset-react-app": "^10.0.1",
     "firebase": "^11.0.1",
-    "mdb-react-ui-kit": "^5.0.0",
+    "mdb-react-ui-kit": "^9.0.0",
     "pdfmake": "^0.2.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.6.0",
     "react-bootstrap-dropdown": "^0.3.0",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0",
+    "react-router-dom": "7.0.0-pre.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.6",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
