--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.12",
-    "axios": "^1.5.0",
+    "axios": "^1.7.9",
     "babel-preset-react-app": "^10.0.1",
-    "firebase": "^11.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "firebase": "^11.1.0",
     "mdb-react-ui-kit": "^9.0.0",
+    "node-schedule": "^2.1.1",
     "pdfmake": "^0.2.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.6.0",
@@ -27,11 +30,14 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"yarn run client\" \"yarn run proxy\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+    "eject": "react-scripts eject",
+    "client": "react-scripts start",
+    "proxy": "node src/Config/proxy.js"
+}
+,
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -53,6 +59,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.9",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "concurrently": "^9.1.0",
     "eslint": "^9.14.0",
     "eslint-config-react-app": "^7.0.1"
   }
