chore: change libs

--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/react": "^18.3.12",
+    "@types/react": "19.0.6",
     "axios": "^1.7.9",
     "babel-preset-react-app": "^10.0.1",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
+    "express": "5.0.1",
     "firebase": "^11.1.0",
     "mdb-react-ui-kit": "^9.0.0",
     "node-schedule": "^2.1.1",
     "pdfmake": "^0.2.2",
-    "react": "^18.3.1",
+    "react": "19.0.0",
     "react-bootstrap": "^2.6.0",
     "react-bootstrap-dropdown": "^0.3.0",
     "react-bootstrap-sweetalert": "^5.2.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0",
     "react-router-dom": "7.0.0-pre.1",
     "react-scripts": "^5.0.1",
-    "react-toastify": "^10.0.6",
+    "react-toastify": "11.0.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
